Se creó con Colab

--- a/tarea/variables_y_expresiones.ipynb
+++ b/tarea/variables_y_expresiones.ipynb
@@ -60,14 +60,55 @@
       "cell_type": "code",
       "source": [
         "## INICIO DE CÓDIGO\n",
+        "ahorro_lunes = float(input(\"Ingresa el monto del dia lunes: \"))\n",
+        "ahorro_martes = float(input(\"Ingresa el monto del dia martes: \"))\n",
+        "ahorro_miercoles = float(input(\"Ingresa el monto del dia miercoles: \"))\n",
+        "ahorro_jueves = float(input(\"Ingresa el monto del dia jueves: \"))\n",
+        "ahorro_viernes = float(input(\"Ingresa el monto del dia viernes: \"))\n",
+        "ahorro_sabado = float(input(\"Ingresa el monto del dia sabado: \"))\n",
+        "ahorro_domingo = float(input(\"Ingresa el monto del dia domingo: \"))\n",
+        "\n",
+        "ahorro_semana = (\n",
+        "                  ahorro_lunes\n",
+        "                  + ahorro_martes\n",
+        "                  + ahorro_miercoles\n",
+        "                  + ahorro_jueves\n",
+        "                  + ahorro_viernes\n",
+        "                  + ahorro_sabado\n",
+        "                  + ahorro_domingo\n",
+        ")\n",
+        "\n",
+        "ahorro_mensual = ahorro_semana*4\n",
+        "print(f\"Durante la semana has logrado ahorrar {ahorro_semana}\")\n",
+        "print(f\"Durante el mes has logrado ahorrar {ahorro_semana}, siguiendo el mismo patron de ahorro\")\n",
         "\n",
         "## FIN DE CÓDIGO"
       ],
       "metadata": {
-        "id": "BX-O1-4wqWF9"
+        "id": "BX-O1-4wqWF9",
+        "outputId": "dbc956bc-a3f4-480f-d2ca-6069948fd1d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingresa el monto del dia lunes: 1\n",
+            "Ingresa el monto del dia martes: 1\n",
+            "Ingresa el monto del dia miercoles: 1\n",
+            "Ingresa el monto del dia jueves: 1\n",
+            "Ingresa el monto del dia viernes: 1\n",
+            "Ingresa el monto del dia sabado: 1\n",
+            "Ingresa el monto del dia domingo: 1\n",
+            "Durante la semana has logrado ahorrar 7.0\n",
+            "Durante el mes has logrado ahorrar 7.0, siguiendo el mismo patron de ahorro\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
