Se creó con Colab

--- a/tarea/variables_y_expresiones.ipynb
+++ b/tarea/variables_y_expresiones.ipynb
@@ -86,10 +86,10 @@
       ],
       "metadata": {
         "id": "BX-O1-4wqWF9",
-        "outputId": "dbc956bc-a3f4-480f-d2ca-6069948fd1d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dbc956bc-a3f4-480f-d2ca-6069948fd1d2"
       },
       "execution_count": 3,
       "outputs": [
@@ -128,14 +128,36 @@
       "cell_type": "code",
       "source": [
         "## INICIO DE CÓDIGO\n",
+        "## 1. Ask for number of seconds as input (int)\n",
+        "## 2. Use the floor division // to find the integer, this section computes minutes.\n",
+        "## 3. Use the module operator to find the remainder, this section computes seconds.\n",
+        "## 4. Print step 3 and 4 with f\"string\"\n",
+        "seconds_total = int(input(\"Please insert total number of seconds:\"))\n",
+        "minutes_total = seconds_total // 60\n",
+        "seconds_remainder = seconds_total % 60\n",
+        "\n",
+        "print(f\"{minutes_total} minutos y {seconds_remainder} segundos\")\n",
         "\n",
         "## FIN DE CÓDIGO"
       ],
       "metadata": {
-        "id": "bAuxBROrqaWb"
+        "id": "bAuxBROrqaWb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0e76b449-8379-4938-8ca0-5e09c1145224"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please insert total number of seconds:601\n",
+            "10 minutos y 1 segundos\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
