Se creó con Colab

--- a/tarea/variables_y_expresiones.ipynb
+++ b/tarea/variables_y_expresiones.ipynb
@@ -78,7 +78,7 @@
         "                  + ahorro_domingo\n",
         ")\n",
         "\n",
-        "ahorro_mensual = ahorro_semana*4\n",
+        "ahorro_mensual = ahorro_semana * 4\n",
         "print(f\"Durante la semana has logrado ahorrar {ahorro_semana}\")\n",
         "print(f\"Durante el mes has logrado ahorrar {ahorro_semana}, siguiendo el mismo patron de ahorro\")\n",
         "\n",
@@ -182,14 +182,45 @@
       "cell_type": "code",
       "source": [
         "## INICIO DE CÓDIGO\n",
+        "## 1. Ask for the three inputs (integers)\n",
+        "## 2. Compute the total score following some constraints.\n",
+        "## 3. Print result.\n",
+        "\n",
+        "start_amount = int(input(\"Please insert the number of starts recollected: \"))\n",
+        "gem_amount = int(input(\"Please insert the number of gems recollected: \"))\n",
+        "time_survived = int(input(\"Please insert the number of time survived in seconds: \"))\n",
+        "\n",
+        "start_score, gem_score, time_score = 10*start_amount , 50*gem_amount , time_survived\n",
+        "total_score =(\n",
+        "              start_score\n",
+        "              + gem_score\n",
+        "              + time_score\n",
+        ")\n",
+        "\n",
+        "print(f\"Your total score is {total_score}\")\n",
         "\n",
         "## FIN DE CÓDIGO"
       ],
       "metadata": {
-        "id": "jkBQHQF1rlUY"
+        "id": "jkBQHQF1rlUY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7710b715-3feb-4f85-a613-b09c816ec7de"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please insert the number of starts recollected: 10\n",
+            "Please insert the number of gems recollected: 2\n",
+            "Please insert the number of time survived in seconds: 10\n",
+            "Your total score is 210\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -213,14 +244,37 @@
       "cell_type": "code",
       "source": [
         "## INICIO DE CÓDIGO\n",
+        "## 1. Objetive: Convert soles to dollars (float).\n",
+        "## 2. Steps: Ask for the amount of soles\n",
+        "## 3. Use a type of change to convert to dollars.\n",
+        "## 4. Use Round the report the final result.\n",
+        "\n",
+        "soles_amount = float(input(\"Insert How much soles do you want to change:S/. \"))\n",
+        "rate_of_change_dollars = float(input(\"Please insert you rate of change desire:Example (3.74): \"))\n",
+        "dollars_amount = round(soles_amount / rate_of_change_dollars, 2)\n",
+        "print(f\"You've successfully changed {soles_amount} soles to dollars, {dollars_amount} $\")\n",
         "\n",
         "## FIN DE CÓDIGO"
       ],
       "metadata": {
-        "id": "fTCsCohHrmQW"
+        "id": "fTCsCohHrmQW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bfc5f467-39cd-458a-a803-59d1d9cc22b7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Insert How much soles do you want to change:S/. 300\n",
+            "Please insert you rate of change desire:Example (3.74): 3.74\n",
+            "You've successfully changed 300.0 soles to dollars, 80.21 $\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
