Se creó con Colab

--- a/variables_y_expresiones.ipynb
+++ b/variables_y_expresiones.ipynb
@@ -466,14 +466,32 @@
       "cell_type": "code",
       "source": [
         "## INICIO DE CÓDIGO\n",
-        "\n",
+        "#1. Ask for phrase and number to repeat\n",
+        "phrase  = str(input(\"Insert your phrase: \"))\n",
+        "number_repeat = int(input(\"Insert a number to repeat the phrase : \"))\n",
+        "print(f\"{phrase*number_repeat}\\n*{number_repeat}\")\n",
         "## FIN DE CÓDIGO"
       ],
       "metadata": {
-        "id": "Vzef3t_Lru0p"
+        "id": "Vzef3t_Lru0p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "df5d6bb3-af51-410e-efe2-42aea83d8121"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Insert your phrase: casa\n",
+            "Insert a number to repeat the phrase : 3\n",
+            "casacasacasa\n",
+            "*3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
