Se creó con Colab

--- a/Laboratorio/estructuras_condicionales.ipynb
+++ b/Laboratorio/estructuras_condicionales.ipynb
@@ -290,6 +290,85 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#Crea una variable (usando input) con tu deporte favorito y verifica que no sea \"fútbol\", el programa debe estar preparado para soportar errores en espacios\n",
+        "#y mayusculas/minusculas. Si el mensaje es fútbol pregunta por el jugador favorito, si el jugador favorito es Messi agradece al usuario.\n",
+        "\n",
+        "# 1. Ask for your favorite sport\n",
+        "# 2. Use strip to delete blank spaces, and lower to avoid capital letters.\n",
+        "\n",
+        "favorite_sport = str(input(\"Please insert your favorite sport: \")).strip().lower()\n",
+        "\n",
+        "if favorite_sport == \"fútbol\" :\n",
+        "  favourite_player=str(input(\"What is your favorite player: \")).strip().lower()\n",
+        "  if favourite_player == \"messi\":\n",
+        "      print(\"Thank you\")\n",
+        "else :\n",
+        "      print(\"You're right fútbol is boring\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QpZBdOBTQZR-",
+        "outputId": "8e33de39-6b8c-4393-85b0-3dcf1e17a0a5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please insert your favorite sport: fútbol\n",
+            "What is your favorite player: Messi\n",
+            "Thank you\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score_programacion = float(input(\"Insert your note \"))\n",
+        "score_ciencia_datos = float(input(\"Insert your note \"))\n",
+        "score_estadistica = float(input(\"Insert your note \"))\n",
+        "score_muestreo = float(input(\"Insert your note \"))\n",
+        "\n",
+        "condition_1 = score_programacion > 18\n",
+        "condition_2 = score_ciencia_datos > 18\n",
+        "condition_3 = score_estadistica > 18\n",
+        "condition_4 = score_muestreo > 18\n",
+        "\n",
+        "if condition_1 + condition_2 + condition_3 + condition_4 >= 3:\n",
+        "  print(\"Aprobado\")\n",
+        "else:\n",
+        "  print(\"Bica\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-_nK_DFQbfAu",
+        "outputId": "46419876-90be-464a-c2ae-31b6ce7c50f3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Insert your note 120\n",
+            "Insert your note 120\n",
+            "Insert your note 115\n",
+            "Insert your note 115\n",
+            "Bica\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "**Ejercicio 1.3**\n",
@@ -686,12 +765,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "user_age = int(input(\"Please insert your age: \"))\n",
+        "if user_age <= 0 or user_age>90:\n",
+        "  print(\"Please insert a valid number\")\n",
+        "  user_age = int(input(\"Please insert your age: \"))\n",
+        "\n",
+        "if user_age >= 18:\n",
+        "  print(\"You can see the movie\")\n",
+        "else:\n",
+        "  print(\"Go home kid\")\n"
+      ],
       "metadata": {
-        "id": "RlSLMcO24yN0"
+        "id": "RlSLMcO24yN0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "959544ce-f8c4-45bb-96c1-0b53792c20f5"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please insert your age: 0\n",
+            "Please insert a valid number\n",
+            "Please insert your age: 2\n",
+            "Go home kid\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -891,12 +995,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Reto 1\n",
+        "alien_color=str(input(\"Inserta el color del alien, verde, amarillo o rojo: \")).strip().lower()\n",
+        "\n",
+        "if alien_color == \"verde\":\n",
+        "  print(\"Atrapaste al alien\")\n",
+        "else :\n",
+        "  print(\"Se te escapo el alien\")\n"
+      ],
       "metadata": {
-        "id": "0h5aKbTt6geM"
+        "id": "0h5aKbTt6geM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "da3f2129-6bd1-4739-a7e5-7a2801373ea2"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Inserta el color del alien, verde, amarillo o rojo: verde\n",
+            "Atrapaste al alien\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -915,12 +1040,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Reto 2\n",
+        "#Steps:\n",
+        "# Three conditionals, three outcomes, I'll use if, elif and else.\n",
+        "\n",
+        "alien_color=str(input(\"Inserta el color del alien, verde, amarillo o rojo: \")).strip().lower()\n",
+        "\n",
+        "if alien_color == \"verde\" :\n",
+        "  print(\"You win 5 points\")\n",
+        "elif alien_color ==\"amarillo\":\n",
+        "  print(\"You win 10 points\")\n",
+        "else:\n",
+        "  print(\"You win 15 points\")"
+      ],
       "metadata": {
-        "id": "7Ez0OH9_6jyC"
+        "id": "7Ez0OH9_6jyC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f283c956-001b-4d53-c11a-643823562930"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Inserta el color del alien, verde, amarillo o rojo: verde\n",
+            "You win 5 points\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -937,9 +1088,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Objective : Produce a program with 3 conditionals\n",
+        "# Constraints : age (int), age== 18 True,  age< 18 or age>65 print difference messages.\n",
+        "# Output : Return a list with candidates if age==18 is satisfied.\n"
+      ],
       "metadata": {
         "id": "BqNiZanB6oQA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZqM5P_6Dsb82"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9VbunlDCr4W7"
       },
       "execution_count": null,
       "outputs": []
