Se creó con Colab

--- a/clase04/02_estructuras_de_datos.ipynb
+++ b/clase04/02_estructuras_de_datos.ipynb
@@ -142,27 +142,33 @@
     {
       "cell_type": "code",
       "source": [
-        "students = ['Angelo', 'Diego', 'Edgar', 'Edwin', 'Enrique']\n",
-        "students"
+        "students = ['Angelo', 'Diego', 'Edgar', 'Edwin','Enrique', ['Estuardo','John','Julio'], 'Adolfo' ]\n",
+        "students\n",
+        "\n",
+        "#Print Edwin with (-)\n",
+        "print(students[-4])\n",
+        "#Print Edwin and Enrique\n",
+        "print(students[3:5])\n",
+        "#Print John and Julio\n",
+        "print(students[5][1:4])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cfq1oJTLEsA2",
-        "outputId": "d416ea3b-cf08-47ba-c625-32c1f4db8509"
+        "outputId": "e60f5627-8a18-45bb-f332-bfd5a2d476a8"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Angelo', 'Diego', 'Edgar', 'Edwin', 'Enrique']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Edwin\n",
+            "['Edwin', 'Enrique']\n",
+            "['John', 'Julio']\n"
+          ]
         }
       ]
     },
@@ -361,6 +367,221 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "¿Cómo agregar elementos dentro de una lista?"
+      ],
+      "metadata": {
+        "id": "ZmkXLsWGZML-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list = [1, 2, 3, 4, 5, 6, [7, 8, 9], 10, 11, 12]\n",
+        "\n",
+        "my_list.append(\"Casa\")\n",
+        "my_list.insert(3,\"Casa\")\n",
+        "my_list.insert(0,\"Casota\")\n",
+        "print(my_list)"
+      ],
+      "metadata": {
+        "id": "4a0-mWVoZLQH",
+        "outputId": "b7595b56-18ba-448e-968e-e105286e9993",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Casota', 1, 2, 3, 'Casa', 4, 5, 6, [7, 8, 9], 10, 11, 12, 'Casa']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Escribe programa que a a recibir el nombre de los estudiantes y el curso. Wardar resultados en listas. El programa debe permanecer abierto hasta salir.   \n",
+        "MOdifique el programa para cada estudiante nueo se warde en el primer slot de la lista.\n"
+      ],
+      "metadata": {
+        "id": "GViFtuZja00Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_names=[]\n",
+        "list_courses=[]\n",
+        "flag=True\n",
+        "while flag:\n",
+        "  student_name=str(input(\"Write your name\"))\n",
+        "  course_name=str(input(\"Write your name\"))\n",
+        "  list_names.append(student_name)\n",
+        "  list_courses.append(course_name)\n",
+        "  close_program = str(input(\"Do yo want to close the program Y/N: \"))\n",
+        "  if close_program.lower() == \"y\":\n",
+        "    flag=False\n",
+        "\n",
+        "print(list_names)\n",
+        "print(list_courses)\n",
+        "\n",
+        "while flag:\n",
+        "  student_name=str(input(\"Write your name\"))\n",
+        "  if student_name in list_names:\n",
+        "    print(\"You're in the list of students\")\n",
+        "  else:\n",
+        "    course_name=str(input(\"Write your name\"))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gXRQAjmibh_J",
+        "outputId": "06c22ff9-c0aa-44c2-b4a5-d30dbc1d57a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Write your nameEros\n",
+            "Write your nameMath\n",
+            "Do yo want to close the program Y/N: N\n",
+            "Write your nameEros Jonathan\n",
+            "Write your nameChemist\n",
+            "Do yo want to close the program Y/N: Y\n",
+            "['Eros', 'Eros Jonathan']\n",
+            "['Math', 'Chemist']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Del Students with Del array and array.pop()"
+      ],
+      "metadata": {
+        "id": "sD1KUTTshCBX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "students =  ['Jhon','Daniel','Ramiro','Herles','Alejandro']\n",
+        "students_b = ['Sherley','Jorge','Bruno']\n",
+        "\n",
+        "print(students)\n",
+        "print(students_b)\n",
+        "print(students.pop())\n",
+        "print(students)\n"
+      ],
+      "metadata": {
+        "id": "1toEPbk8byap",
+        "outputId": "5d6ce947-fc71-49af-abad-45830d9070df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Jhon', 'Daniel', 'Ramiro', 'Herles', 'Alejandro']\n",
+            "['Sherley', 'Jorge', 'Bruno']\n",
+            "Alejandro\n",
+            "['Jhon', 'Daniel', 'Ramiro', 'Herles']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Reciba lista de compras, posteriormente que enie una orden de procesamiento por cada pedido y que elimine paulatinamente cada uno del carrito de compras mientras se procesa."
+      ],
+      "metadata": {
+        "id": "wwOSiQm3jHy8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_compras = []\n",
+        "flag = True\n",
+        "\n",
+        "while flag :\n",
+        "  items = input(\"Write your items: \")\n",
+        "  list_compras.append(items)\n",
+        "  exit = input (\"Do you want to keep adding item: Y/N\")\n",
+        "  if exit.lower() == \"n\":\n",
+        "    flag = False\n",
+        "\n",
+        "print(\"Procesando compras\")\n",
+        "print(list_compras)\n",
+        "\n",
+        "while len(list_compras) >= 0:\n",
+        "  print(list_compras)\n",
+        "  print(list_compras.pop())\n",
+        "  if len(list_compras) == 0 :\n",
+        "    break\n",
+        "\n",
+        "print(list_compras)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "IyoDD2vTjXNi",
+        "outputId": "505088e2-42e2-472a-cbf6-3795d80dccdd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Write your items: Caramelo\n",
+            "Do you want to keep adding item: Y/NY\n",
+            "Write your items: Papaya\n",
+            "Do you want to keep adding item: Y/NY\n",
+            "Write your items: Sandia\n",
+            "Do you want to keep adding item: Y/NN\n",
+            "Procesando compras\n",
+            "['Caramelo', 'Papaya', 'Sandia']\n",
+            "['Caramelo', 'Papaya', 'Sandia']\n",
+            "Sandia\n",
+            "['Caramelo', 'Papaya']\n",
+            "Papaya\n",
+            "['Caramelo']\n",
+            "Caramelo\n",
+            "[]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "my_list = [1, 2, 3, 4, 5, 6, [7, 8, 9], 10, 11, 12]\n",
@@ -404,6 +625,172 @@
             "8\n",
             "[[7, 8, 9], 10, 11, 12]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sort organiza la lista en orden al reez de menor a mayor, sort(reerse = True)"
+      ],
+      "metadata": {
+        "id": "lHnmz2-LvpcC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [3,7,1,2,6,4]\n",
+        "numbers.sort()\n",
+        "print(numbers)\n",
+        "\n",
+        "numbers = [3,7,1,2,6,4]\n",
+        "numbers.sort(reverse= True)\n",
+        "print(numbers)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "44XI-lyrthH5",
+        "outputId": "9c900c06-2abd-4ae1-de21-807552c7fd48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 6, 7]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Programa que permite ingresar el nombre de un estudiante y preguntes la nota de los cursos de matematicas, programación estadisticas, luego calcule su promedio y guarde en los listas separadas su nombre y su nota fina. El programa debe terminar cuando el usuario indique salir."
+      ],
+      "metadata": {
+        "id": "WsaXeDjFwd1b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_student = ['eros','pedro','juan']\n",
+        "math_grades = [8,12,13]\n",
+        "stad_grades = [20,8,6]\n",
+        "print(list_student.index('pedro'))\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "oJspdqXP0wgx",
+        "outputId": "edb3d8bb-4098-4b82-8333-368cf2f5f89e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_student = ['eros','pedro','juan']\n",
+        "math_grades = [8,12,13]\n",
+        "stad_grades = [20,8,6]\n",
+        "promedio = []\n",
+        "final_promedio_student = []\n",
+        "flag = True\n",
+        "\n",
+        "while flag:\n",
+        "  student = input(\"Write the name of the student: \")\n",
+        "  if student in list_student:\n",
+        "    position = list_student.index(student)\n",
+        "    final_promedio = (math_grades[position] +\n",
+        "                      stad_grades[position]\n",
+        "                      ) / 2\n",
+        "    final_promedio_student.append([student, final_promedio])\n",
+        "    print(final_promedio_student[position])\n",
+        "  else:\n",
+        "    print(\"You are not a student\")\n",
+        "    salir = input(\"Write exit to finish the program: \")\n",
+        "    if salir.lower() == \"exit\":\n",
+        "      flag = False\n",
+        "\n",
+        "print(final_promedio_student)\n"
+      ],
+      "metadata": {
+        "id": "ggJ7TK8FxNsc",
+        "outputId": "3ef82cf3-e2ac-4f48-8840-7203d046fdfb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Write the name of the student: eros\n",
+            "['eros', 14.0]\n",
+            "Write the name of the student: pedro\n",
+            "['pedro', 10.0]\n",
+            "Write the name of the student: juan\n",
+            "['juan', 9.5]\n",
+            "Write the name of the student: cesar\n",
+            "You are not a student\n",
+            "Write exit to finish the program: exit\n",
+            "[['eros', 14.0], ['pedro', 10.0], ['juan', 9.5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Usando range , imprima los multiplos de 13 menores de 200."
+      ],
+      "metadata": {
+        "id": "enSxtuRq3H1D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(range(0,200,13))"
+      ],
+      "metadata": {
+        "id": "eBWR0otE3BuS",
+        "outputId": "fbb8d295-11ba-47be-a8ed-34238d072fd5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 13, 26, 39, 52, 65, 78, 91, 104, 117, 130, 143, 156, 169, 182, 195]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
         }
       ]
     },
