Se creó con Colab

--- a/Clase05/03_estructuras_de_datos_parte2.ipynb
+++ b/Clase05/03_estructuras_de_datos_parte2.ipynb
@@ -75,6 +75,41 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nHfEQ0jVyYLb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "{'nombre':'Eros'}.keys()"
+      ],
+      "metadata": {
+        "id": "bSX7xek_yEO0",
+        "outputId": "445f7d97-7668-4e37-e280-eac46121322f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['nombre'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Ejemplo 1.1: Creación de Diccionarios y Acceso a Elementos\n"
@@ -201,12 +236,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "car_data = {'marca':'chino', 'modelo':'pirata', 'año':'1995','color':'caqui'}\n",
+        "print(car_data['marca'])\n",
+        "print(car_data['modelo'])\n",
+        "print(car_data['año'])\n",
+        "print(car_data['color'])\n",
+        "car_data['precio'] = 35\n",
+        "del car_data['color']\n",
+        "print(car_data)\n",
+        "print(car_data.keys())\n",
+        "print(car_data.values())"
+      ],
       "metadata": {
-        "id": "x2uN2fYnume5"
+        "id": "x2uN2fYnume5",
+        "outputId": "8e30a377-6fc5-4b1c-b339-3a0a9b891441",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "chino\n",
+            "pirata\n",
+            "1995\n",
+            "caqui\n",
+            "{'marca': 'chino', 'modelo': 'pirata', 'año': '1995', 'precio': 35}\n",
+            "dict_keys(['marca', 'modelo', 'año', 'precio'])\n",
+            "dict_values(['chino', 'pirata', '1995', 35])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -227,6 +291,47 @@
       "metadata": {
         "id": "5GC8_tPvuu3r"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Operaciones mas importantes a set\n"
+      ],
+      "metadata": {
+        "id": "P06Ldg3L3amk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista1=['Columna1','columna2', 'columna3', ' columna4']\n",
+        "lista2=['Columna5','columna6', 'columna3', ' columna4']\n",
+        "\n",
+        "lista1+lista2\n",
+        "list(set(lista1+lista2))\n",
+        "\n",
+        "list(set(lista1)-set(lista2))"
+      ],
+      "metadata": {
+        "id": "nbiRfaY93dT7",
+        "outputId": "5807b103-83b0-4121-e30c-0b6b104be90f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Columna1', 'columna2']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
